--- a/style/style.css
+++ b/style/style.css
@@ -103,3 +103,25 @@ a:hover {
   background-color: #254aa5;
   border: #254aa5;
 }
+
+.features {
+  display: inline-flex;
+  margin-top: 30px;
+  justify-items: flex-end;
+  width: 100%;
+  padding: 40px 0px 40px 0px;
+  /* margin-left: -40px; */
+  /* margin-right: -40px; */
+  /* padding-right: 0px; */
+}
+
+.features>div {
+  display: inline-flex;
+  justify-items: flex-end;
+  /* height: 400px; */
+  width: 23rem;
+  padding: 0px;
+  /* margin-left: -40px; */
+  /* margin-right: -40px; */
+  /* padding-right: 0px; */
+}
