--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
+:root {
+  --primary: #254aa5;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -85,12 +89,12 @@ a:hover {
   height: 100%;
 }
 
-/* .section-heading {
+.section-heading {
   font-family: Source Sans Pro, sans-serif;
   font-size: 3.5rem;
   font-weight: 900 !important;
   color: #254aa5;
-} */
+}
 
 .events-section {
   position: relative;
@@ -124,4 +128,38 @@ a:hover {
   /* margin-left: -40px; */
   /* margin-right: -40px; */
   /* padding-right: 0px; */
+}
+
+.miss {
+  /* font-family: ; */
+  letter-spacing: 7px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.up-eve {
+  font-family: Source Sans Pro, sans-serif;
+  font-weight: 700 !important;
+}
+
+.about-gyan-vihar {
+  border-bottom: 1px solid #ededed;
+}
+
+.about-gyan-vihar hr {
+  border-width: 2px;
+  border-color: #000;
+
+}
+
+.btn-warning1 {
+  color: #fff;
+  background-color: #254aa5;
+  border: #254aa5;
+}
+
+.btn-warning1:hover {
+  color: #fff;
+  background-color: #254aa5;
+  border: #254aa5;
 }
