--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,7 @@ a:hover {
 .research-section {
   width: 100%;
   background-color: #fff;
-  background-image: url(/Images/gyanvihar\ research\ for\ a\ better\ world_background.png);
+  background-image: url(/Images/gyanvihar-research-for-a-better-world_background.png);
 }
 
 .research-section .card-body .center-big {
